--- a/styles/main.css
+++ b/styles/main.css
@@ -1,22 +1,162 @@
 body {
-  background:#999;
-  font-family: arial;
-} 
-
-h1, h2 {
-  color: #000;
-}
+  background:#eee9e9;
+  font-family: 'Crimson Text', 'Calibri', serif;
+  margin: 0;
+  }
 
 p {
-  background: #666;
-  color: white;
-  padding: 10px, 10px,0px,
+  
+  color: black;
+  font-size: 1.3em;
+  padding: 20px 18% 10px 18%;
 }
 
-.firstclass {
-  color:black;
+a {
+  color: #D61347; /* Default link color */
+  
 }
 
-#firstid {
-  color:rgb(179, 35, 35);
+a:hover {
+  color: #D61347; /* Link color on hover */
+}
+
+
+.background-image {
+  background-image: url("../images/background-image.png");
+  background-size: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-color: rgba(186, 175, 175, 0.85);
+}
+
+.welcome-header {
+  padding: 20px;
+  text-align: center;
+  font-size: 3.2em;
+  font-weight: bold;
+
+}
+.jazzpiano {
+  padding: 20px 5px 0px 18%;
+  font-size: 1.7em;
+  font-weight: bold;
+}
+
+.specialising{
+  padding: 5px 5px 5px 0px;
+  font-size: 1em;
+  margin-left: 18%;
+  margin-right: 18%;
+}
+
+.welcome {
+  padding: 5px;
+  color: #D61347;
+  font-weight: bold;
+}
+
+.learn {
+  padding: 5px;
+  color: #D61347;
+  font-weight: bold;
+}
+
+.discography {
+  padding: 5px;
+  color: #D61347;
+  font-weight: bold;
+ 
+}
+.recent-work {
+  padding: 5px;
+  color: #D61347;
+  font-weight: bold;
+  
+}
+
+.testimonials {
+  padding: 5px;
+  color: #D61347;
+  font-weight: bold;
+ 
+}
+.contact {
+  padding: 5px;
+  color: #D61347;
+  font-weight: bold;
+  text-align: right;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.right-items {
+  padding: 5px;
+  display: flex;
+  margin-top: 20px;
+  margin-right: 18%;
+  
+}
+
+.right-items span {
+  margin-left: 5px; 
+}
+
+.indented-list {
+  font-size: 1.3em;
+  margin-left: 25%;
+  margin-bottom: 20px;
+  margin-right: 18%;
+
+}
+
+.footer {
+  background-color: rgba(186, 175, 175, 0.85);
+  margin-top: 0;
+  color: black;
+  padding: 20px 10px 20px 10%;
+  font-style: strong;
+  background-image: url("../images/header-background.png");
+  position: sticky;bottom: 0px;
+  padding: 10px 0px 10px 18%;
+}
+
+/* Styles for screens larger than 1024px */
+@media (min-width: 1025px) {
+  .right-items {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 20px;
+    margin-right: 18%;
+  }
+}
+
+/* Styles for screens smaller than 1025px */
+@media (max-width: 1024px) {
+  .right-items {
+    display: block;
+    text-align: right;
+    margin-top: 10px;
+    margin-right: 18%;
+  }
+}
+
+#welcome {
+  font-style: bold;
+}
+
+.content {
+  margin-bottom: 0; /* Set the margin-bottom to 0 */
+}
+
+.nav {
+  background-image: url("../images/header-background.png");
+  position: sticky;top: 0px;
+  padding: 0px 0px 10px 0px;
 }
