--- a/styles/main.css
+++ b/styles/main.css
@@ -56,7 +56,7 @@ a:hover {
   font-weight: bold;
 }
 
-.learn {
+.html-css {
   padding: 5px;
   color: #D61347;
   font-weight: bold;
@@ -68,7 +68,7 @@ a:hover {
   font-weight: bold;
  
 }
-.recent-work {
+.blog {
   padding: 5px;
   color: #D61347;
   font-weight: bold;
@@ -105,6 +105,22 @@ a:hover {
 
 .right-items span {
   margin-left: 5px; 
+}
+
+.h2 {
+  margin: 0;
+  color: black;
+  font-size: 1.3em;
+  font-weight: bold;
+  padding: 20px 18% 10px 18%;
+}
+
+.image {
+  margin: 0;
+  color: black;
+  font-size: 1.3em;
+  font-weight: bold;
+  padding: 20px 18% 10px 18%;
 }
 
 .indented-list {
@@ -151,8 +167,13 @@ a:hover {
   font-style: bold;
 }
 
+#html-css {
+  font-style: bold;
+}
+
 .content {
   margin-bottom: 0; /* Set the margin-bottom to 0 */
+
 }
 
 .nav {
