--- a/styles/main.css
+++ b/styles/main.css
@@ -1,30 +1,30 @@
 body {
-  background:#eee9e9;
+  background: #eee9e9;
   font-family: 'Crimson Text', 'Calibri', serif;
   margin: 0;
-  }
+}
 
-  p {
-    margin: 0;
-    color: black;
-    font-size: 1.3em;
-    padding: 20px 18% 10px 18%;
-  }
+p, u, .default-blog-paragraph {
+  padding: 5px 5px 5px 0;
+  font-size: 1em;
+  margin-left: 18%;
+  margin-right: 18%;
+}
 
 a {
   color: #D61347; /* Default link color */
-  
 }
 
 a:hover {
   color: #D61347; /* Link color on hover */
 }
 
-.default-blog-paragraph {
-  padding: 5px 5px 5px 0px;
+.button {
+  padding: 5px 5px 5px 0;
   font-size: 1em;
   margin-left: 18%;
   margin-right: 18%;
+
 }
 
 .background-image {
@@ -41,64 +41,38 @@ a:hover {
   text-align: center;
   font-size: 3.2em;
   font-weight: bold;
-
 }
+
 .jazzpiano {
-  padding: 20px 5px 0px 18%;
+  padding: 20px 5px 0 18%;
   font-size: 1.7em;
   font-weight: bold;
 }
 
-.specialising{
-  padding: 5px 5px 5px 0px;
+.specialising {
+  padding: 5px 5px 5px 0;
   font-size: 1em;
   margin-left: 18%;
   margin-right: 18%;
 }
 
-.welcome {
-  padding: 5px;
-  color: #D61347;
-  font-weight: bold;
-}
-
-.html-css {
-  padding: 5px;
-  color: #D61347;
-  font-weight: bold;
-}
-
-.discography {
-  padding: 5px;
-  color: #D61347;
-  font-weight: bold;
- 
-}
-.blog {
-  padding: 5px;
-  color: #D61347;
-  font-weight: bold;
-  
-}
-
-.testimonials {
-  padding: 5px;
-  color: #D61347;
-  font-weight: bold;
- 
-}
+.welcome,
+.html-css,
+.discography,
+.blog,
+.testimonials,
 .contact {
   padding: 5px;
   color: #D61347;
   font-weight: bold;
-  text-align: right;
 }
+
+.button
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
 
 .right-items {
@@ -106,21 +80,13 @@ a:hover {
   display: flex;
   margin-top: 20px;
   margin-right: 18%;
-  
 }
 
 .right-items span {
   margin-left: 5px; 
 }
 
-.h2 {
-  margin: 0;
-  color: black;
-  font-size: 1.3em;
-  font-weight: bold;
-  padding: 20px 18% 10px 18%;
-}
-
+.h2,
 .image {
   margin: 0;
   color: black;
@@ -134,18 +100,34 @@ a:hover {
   margin-left: 25%;
   margin-bottom: 20px;
   margin-right: 18%;
-
 }
 
 .footer {
   background-color: rgba(186, 175, 175, 0.85);
   margin-top: 0;
   color: black;
-  padding: 20px 10px 20px 10%;
+  padding: 20px 10px;
   font-style: strong;
   background-image: url("../images/header-background.png");
-  position: sticky;bottom: 0px;
-  padding: 10px 0px 10px 18%;
+  position: sticky;
+  bottom: 0;
+  padding: 10px 0 10px 18%;
+}
+
+#welcome,
+#html-css {
+  font-style: bold;
+}
+
+.content {
+  margin-bottom: 0; /* Set the margin-bottom to 0 */
+}
+
+.nav {
+  background-image: url("../images/header-background.png");
+  position: sticky;
+  top: 0;
+  padding: 0 0 10px 0;
 }
 
 /* Styles for screens larger than 1024px */
@@ -167,23 +149,3 @@ a:hover {
     margin-top: 10px;
     margin-right: 18%;
   }
-}
-
-#welcome {
-  font-style: bold;
-}
-
-#html-css {
-  font-style: bold;
-}
-
-.content {
-  margin-bottom: 0; /* Set the margin-bottom to 0 */
-
-}
-
-.nav {
-  background-image: url("../images/header-background.png");
-  position: sticky;top: 0px;
-  padding: 0px 0px 10px 0px;
-}
